# nfft-cffi

./: LICENSE  MANIFEST.in  README.md  README.rst  build.py  setup.cfg  setup.py
builders/: build_bindings.py
cffi_builders/: nfft_build.py
examples/: phantom256.mat  radialSamplingDensityCompensation.py
nfft/: __init__.py  _wrappers.py  nfft.py  util.py
tests/: test_nfft.py
