[metadata]
name = nfft-cffi
version = 0.1
summary = Python interface to the NFFT library
keywords = gridding,nfft,nufft,nusfft
home-page = https://github.com/ghisvail/nfft-cffi
author = Ghislain Antony Vaillant
author-email = ghisvail@gmail.com
classifiers = Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development